--- a/css/styles.css
+++ b/css/styles.css
@@ -198,6 +198,53 @@ body {
   }
 }
 
+.controls {
+  height: 50px;
+  width: 125px;
+  position: fixed;
+  z-index: 5;
+  right: 5%;
+  bottom: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-transition: opacity ease 0.2s;
+  transition: opacity ease 0.2s;
+  cursor: pointer;
+}
+
+.controls-img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 45%;
+          flex: 0 0 45%;
+}
+
+.controls-item {
+  max-width: 100%;
+  max-height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.modal-window {
+  width: 150px;
+  height: 95px;
+  padding: 25px;
+  background: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-radius: 20px 20px 20px 0;
+  position: absolute;
+  left: 1.5%;
+  top: 42%;
+  -webkit-animation: floating ease 1s infinite alternate;
+          animation: floating ease 1s infinite alternate;
+  -webkit-transition: left ease 2s;
+  transition: left ease 2s;
+}
+
 .fullpage-section {
   width: 100vw;
   height: 100vh;
@@ -628,6 +675,28 @@ body {
   100% {
     -webkit-transform: rotate(-10deg);
             transform: rotate(-10deg);
+  }
+}
+
+@-webkit-keyframes floating {
+  0% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+  100% {
+    -webkit-transform: translateY(15px);
+            transform: translateY(15px);
+  }
+}
+
+@keyframes floating {
+  0% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+  100% {
+    -webkit-transform: translateY(15px);
+            transform: translateY(15px);
   }
 }
 
