--- a/css/styles.scss
+++ b/css/styles.scss
@@ -73,6 +73,7 @@ body{
         max-height: 100%;
     }
 }
+
 @keyframes textSlide {
     0%{
         left: 0;
@@ -92,7 +93,39 @@ body{
     }
 }
 .main{
-    
+}
+.controls{
+    height: 50px;
+    width: 125px;
+    position: fixed;
+    z-index: 5;
+    right: 5%;
+    bottom: 5%;
+    display: flex;
+    justify-content: space-between;
+    transition: opacity ease 0.2s;
+    cursor: pointer;
+}
+.controls-img{
+    flex: 0 0 45%;
+}
+.controls-item{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+.modal-window{
+    width: 150px;
+    height: 95px;
+    padding: 25px;
+    background: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    border-radius: 20px 20px 20px 0;
+    position: absolute;
+    left: 1.5%;
+    top: 42%;
+    animation: floating ease 1s infinite alternate;
+    transition: left ease 2s;
 }
 .fullpage-section{
     width: 100vw;
@@ -381,6 +414,14 @@ body{
     100%{
         transform: rotate(-10deg);
         // transform: translateX(-10px);
+    }
+}
+@keyframes floating {
+    0%{
+        transform: translateY(0px);
+    }
+    100%{
+        transform: translateY(15px);
     }
 }
 @keyframes rotate {
